objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>Department</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Education Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scholarship_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Scholarship Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-marketing</fullName>
                </value>
                <value>
                    <fullName> Accounting analysis and audit</fullName>
                </value>
                <value>
                    <fullName> Information systems and technologies (in economics)</fullName>
                </value>
                <value>
                    <fullName> Finance and credit</fullName>
                </value>
                <value>
                    <fullName> Economics and enterprise management</fullName>
                </value>
                <value>
                    <fullName> Belarusian philology</fullName>
                </value>
                <value>
                    <fullName> Russian philology</fullName>
                </value>
                <value>
                    <fullName> Daytime</fullName>
                </value>
                <value>
                    <fullName> Romano-Germanic Philology (German)</fullName>
                </value>
                <value>
                    <fullName> Romano-Germanic Philology (English)</fullName>
                </value>
                <value>
                    <fullName> Information and measuring equipment</fullName>
                </value>
                <value>
                    <fullName> Technical operation of power equipment organizations</fullName>
                </value>
                <value>
                    <fullName> Physics (production)</fullName>
                </value>
                <value>
                    <fullName> Physics (scientific and educational activities)</fullName>
                </value>
                <value>
                    <fullName> Computer security (mathematical methods and software systems)</fullName>
                </value>
                <value>
                    <fullName> Mathematics (scientific and pedagogical activity)</fullName>
                </value>
                <value>
                    <fullName> Applied Mathematics (research and production activities)</fullName>
                </value>
                <value>
                    <fullName> Information Technology Software</fullName>
                </value>
                <value>
                    <fullName> Information Resource Management</fullName>
                </value>
                <value>
                    <fullName> Biology (scientific and educational activities)</fullName>
                </value>
                <value>
                    <fullName> Biology (biotechnology)</fullName>
                </value>
                <value>
                    <fullName> Bioecology</fullName>
                </value>
                <value>
                    <fullName> History (domestic and universal)</fullName>
                </value>
                <value>
                    <fullName> Information and communication</fullName>
                </value>
                <value>
                    <fullName> Journalism</fullName>
                </value>
                <value>
                    <fullName> Linguistic support of intercultural communications</fullName>
                </value>
                <value>
                    <fullName> Sociology</fullName>
                </value>
                <value>
                    <fullName> Tourism and Hospitality</fullName>
                </value>
                <value>
                    <fullName> Preschool education</fullName>
                </value>
                <value>
                    <fullName> Speech therapy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_group__c</fullName>
        <label>Student group</label>
        <referenceTo>Student_group__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Budget</fullName>
        <active>true</active>
        <label>Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Paid</fullName>
        <active>true</active>
        <label>Paid</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>